# KZBIT_Aut

./: .env.example  .gitignore  Dockerfile  README.md  account_manager.py  accounts.json  automation.py  browser.py  config.py  health_server.py  main.py  models.py  nixpacks.toml  popup_monitor.py  pyproject.toml  replit.nix  requirements.txt  screenshot.py  telegram_bot.py  test_visual.py  timing.py
tests/: __init__.py  test_timing.py
